<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewHostProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/textViewResultProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <ImageView
        android:id="@+id/imgDescLogin"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgDescLogin"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtWelcome"
        android:gravity="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_profile"
        android:ems="10"
        android:hint="@string/edtxtUser"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_key"
        android:hint="@string/edtxtPass"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnLogin"
        app:cornerRadius="25dp"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnReg"
        app:cornerRadius="25dp" />

</LinearLayout>