<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pocketbook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_newTransactionFragment"
            app:destination="@id/newTransactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.pocketbook.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pocketbook.ui.profile.ProfileFragment"
        android:label="@string/menu_profile" />
    <fragment
        android:id="@+id/newTransactionFragment"
        android:name="com.example.pocketbook.ui.newtransaction.NewTransactionFragment"
        android:label="new_transaction_fragment"
        tools:layout="@layout/fragment_new_transaction" >
        <action
            android:id="@+id/action_newTransactionFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>