<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <Button
        android:id="@+id/buttonGetTransactionData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Get Transaction Data" />

    <TextView
        android:id="@+id/textViewHomeResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/buttonGetTransactionData"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHomeResult"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMonthBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_dollar"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtBudgetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtMonthBudget"
                    android:background="@color/purple_500"
                    android:text="@string/txtBudget"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMonthIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_dollar"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtIncomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtMonthIncome"
                    android:background="@color/purple_500"
                    android:text="@string/txtIncome"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMonthSpend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_dollar"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtExpenseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtMonthSpend"
                    android:background="@color/purple_500"
                    android:text="@string/txtSpend"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSaving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_dollar"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSavingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSaving"
                    android:background="@color/purple_500"
                    android:text="@string/txtSaving"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1">

        <TextView
            android:id="@+id/txtDaily"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDaily"
            android:textSize="15dp"
            android:layout_marginStart="10dp"/>

        <ImageButton
            android:id="@+id/btnAdd"
            style="@style/Widget.App.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/btnAdd"
            android:src="@drawable/plus_sign" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransaction"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/gridLayout1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:scrollbars="vertical" />

</RelativeLayout>